--- a/.github/workflows/video.yml
+++ b/.github/workflows/video.yml
@@ -15,7 +15,7 @@ jobs:
         uses: FedericoCarboni/setup-ffmpeg@v1-beta
         id: setup-ffmpeg
       - name: Generate Video
-        run: ffmpeg -framerate 10 -pattern_type glob -i "images/*.jpg" -c:v libx264 -crf 0 video.mp4
+        run: ffmpeg -framerate 10 -pattern_type glob -i "images/*.jpg" -c:v libx264 -crf 0 ./videos/video.mp4
       - name: Check to see if a new video file has been created
         id: changes
         run: |
@@ -25,7 +25,7 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add ./*
+          git add ./videos/*
           git commit -m "Video Generated, Automated" -a
         if: steps.changes.outputs.count > 0
       - name: Push changes
