--- a/.github/workflows/video.yml
+++ b/.github/workflows/video.yml
@@ -27,6 +27,7 @@ jobs:
           echo "::set-output name=count::$(git diff --name-only | wc -l)"
       - name: Commit files
         run: |
+          rm -rf ./videos/video.mp4
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add ./gif/animation.gif
